# reddit-realtime-sentiment-visualization-with-grafana-influxdb

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
grafana_dashboards/: Reddit Sentiments.json
src/data_ingestion/: reddit_stream.py
src/data_storage/: influxdb.py
src/sentiment_analysis/: sentiment_model.py
