[project]
name = "reddit-sentiment-analysis"
version = "0.1.0"
description = ""
authors = [{ name = "HAI" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
praw = "^7.7.1"
textblob = "^0.17.1"
influxdb-client = "^1.38.0"
python-dotenv = "^1.0.0"
