[project]
name = "reddit-sentiment-analysis"
version = "0.1.0"
description = ""
authors = [{ name = "HAI" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "influxdb3-python (>=0.12.0,<0.13.0)",
    "praw (>=7.8.1,<8.0.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
